// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Person gets a single person when querying by root node 1`] = `
Object {
  "data": Object {
    "node": Object {
      "email": "isaac.hardy@newspring.cc",
      "firstName": "Isaac",
      "id": "Person:057b0758543270d1cb21784cac4d3f5c",
      "lastName": "Hardy",
      "nickName": "Isaac",
    },
  },
}
`;

exports[`Person gets people by an email 1`] = `
Object {
  "data": Object {
    "people": Array [
      Object {
        "email": "isaac.hardy@newspring.cc",
        "firstName": "Isaac",
        "id": "Person:057b0758543270d1cb21784cac4d3f5c",
        "lastName": "Hardy",
        "nickName": "Isaac",
      },
    ],
  },
}
`;
